<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Letter Translator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="_">"         "</string>
    <string name="choose_colors">Choose Colors</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>

</resources>